--- a/server/pom.xml
+++ b/server/pom.xml
@@ -84,6 +84,11 @@
   <version>0.11.2</version>
   <scope>runtime</scope>
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-devtools</artifactId>
+    <version>2.6.3</version>
+</dependency>
   </dependencies>
 
   <build>
