--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
     "node-geocoder": "^4.0.0",
     "react": "^17.0.2",
