--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-#VSCode
+# VSCode
 .vscode
 
-#IntelliJ
+# IntelliJ
 ./server/.idea
+
+# plantUML
+.puml
