--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
+    "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "states-us": "^1.0.1",
     "sweetalert2": "^11.3.10",
