--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,10 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "redux-saga": "^1.1.3",
     "states-us": "^1.0.1",
     "sweetalert2": "^11.3.10",
     "sweetalert2-react-content": "^4.2.0",
